# cs4mt_arm_dynamic_footprint_nav2

./: CMakeLists.txt  README.md  package.xml
config/: arm_footprint_module.yaml  mt_cognitive_master.yaml  params_neo.yaml  params_tiago.yaml
launch/: cs4mt_armfootprint_aware_navigation.launch.py
scripts/: fetch_urdf_links.py
scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
scripts/log/: latest_build
src/: MTArmFootprintCognitiveCore.cpp  MTArmFootprintCognitiveModule.cpp  MTArmFootprintInput.cpp  MTArmFootprintOutput.cpp
