<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cs4mt_armfootprint_aware_navigation</name>
  <version>0.0.1</version>
  <description>
    Navigation cognition for CS4 Manufacturing Testbed.
    Includes:
      - Navigation Goal Cognitive Core (inflation radius adaptation)
      - Arm Footprint Aware Navigation (cs4mt_armfootprint_aware_navigation)
        Real-time MPO-700 + UR10 footprint projection onto Nav2 costmaps.
  </description>
  <maintainer email="keerthi.sagar@imr.ie">KeerthiS</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>

  <!-- CS4Home core framework -->
  <depend>cs4home_core</depend>

  <!-- Message and service dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rcl_interfaces</depend>

  <!-- Transform dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Behavior Tree dependency -->
  <depend>behaviortree_cpp_v3</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
